--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\jasmi\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
 j2ee.server.home=C:/Users/jasmi/Desktop/apache-tomcat-7.0.78
 j2ee.server.instance=tomcat70:home=C:\\Users\\jasmi\\Desktop\\apache-tomcat-7.0.78
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\jasmi\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
