--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,82 +1,81 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.web.dir}/WEB-INF/classes
-build.classes.excludes=**/*.java,**/*.form
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-build.web.dir=${build.dir}/web
-build.web.excludes=${build.classes.excludes}
-client.urlPart=
-compile.jsps=false
-conf.dir=${source.root}/conf
-debug.classpath=${javac.classpath}:${build.classes.dir}
-debug.test.classpath=\
-    ${run.test.classpath}
-display.browser=true
-dist.dir=dist
-dist.ear.war=${dist.dir}/${war.ear.name}
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.war=${dist.dir}/${war.name}
-endorsed.classpath=
-excludes=
-includes=**
-j2ee.compile.on.save=false
-j2ee.copy.static.files.on.save=false
-j2ee.deploy.on.save=false
-j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
-j2ee.server.type=Tomcat
-jar.compress=false
-javac.classpath=\
-    ${libs.jstl.classpath}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.debug=true
-javac.deprecation=false
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}
-javac.test.processorpath=${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.preview=true
-javadoc.private=false
+#Fri Jun 09 08:36:17 EDT 2017
 javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-jspcompilation.classpath=${jspc.classpath}:${javac.classpath}
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss\:/css
+build.classes.excludes=**/*.java,**/*.form
+javadoc.author=false
+j2ee.platform=1.5
+dist.war=${dist.dir}/${war.name}
+javac.target=1.6
+build.generated.dir=${build.dir}/generated
 resource.dir=setup
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-# Space-separated list of JVM arguments used when running class with main method
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
+build.web.excludes=${build.classes.excludes}
+war.ear.name=Project1.war
+j2ee.compile.on.save=false
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.4.2.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat7-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar
+war.package=true
+debug.test.classpath=${run.test.classpath}
+build.dir=build
+javac.deprecation=false
+auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
+persistence.xml.dir=${conf.dir}
+j2ee.copy.static.files.on.save=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less\:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+test.src.dir=test
+junit.selected.version=3
+includes=**
+jar.compress=false
+annotation.processing.processors.list=
+javadoc.version=false
+build.classes.dir=${build.web.dir}/WEB-INF/classes
+dist.dir=dist
+javac.source=1.6
+javac.debug=true
+javac.test.processorpath=${javac.test.classpath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+javadoc.notree=false
 runmain.jvmargs=
 source.root=src
-src.dir=${source.root}/java
-test.src.dir=test
+platform.active=default_platform
+javadoc.preview=true
+j2ee.deploy.on.save=false
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
 war.content.additional=
-war.ear.name=Project1.war
-war.name=Project1.war
-war.package=true
-web.docbase.dir=web
+client.urlPart=
+javadoc.additionalparam=
+javac.classpath=${libs.jstl.classpath}
+javadoc.noindex=false
 webinf.dir=${web.docbase.dir}/WEB-INF
+annotation.processing.enabled.in.editor=true
+javadoc.private=false
+javadoc.encoding=
+build.test.classes.dir=${build.dir}/test/classes
+jspcompilation.classpath=${jspc.classpath}\:${javac.classpath}
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+javac.compilerargs=
+web.docbase.dir=web
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+dist.ear.war=${dist.dir}/${war.ear.name}
+j2ee.server.type=Tomcat
+conf.dir=${source.root}/conf
+annotation.processing.run.all.processors=true
+compile.jsps=false
+excludes=
+javac.processorpath=${javac.classpath}
+build.test.results.dir=${build.dir}/test/results
+display.browser=true
+endorsed.classpath=
+javadoc.use=true
+build.web.dir=${build.dir}/web
+javadoc.nonavbar=false
+war.name=Project1.war
+javadoc.windowtitle=
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+src.dir=${source.root}/java
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${javac.classpath}\:${build.classes.dir}
