--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.23-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Fri Jun 09 08:36:17 EDT 2017
 javadoc.splitindex=true
 lib.dir=${web.docbase.dir}/WEB-INF/lib
@@ -6,13 +8,12 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.author=false
 j2ee.platform=1.5
 dist.war=${dist.dir}/${war.name}
-javac.target=1.6
+javac.target=1.7
 build.generated.dir=${build.dir}/generated
 resource.dir=setup
 build.web.excludes=${build.classes.excludes}
 war.ear.name=Project1.war
 j2ee.compile.on.save=false
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.4.2.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat7-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar
 war.package=true
 debug.test.classpath=${run.test.classpath}
 build.dir=build
@@ -30,10 +31,12 @@ annotation.processing.processors.list=
 javadoc.version=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 dist.dir=dist
-javac.source=1.6
+javac.source=1.7
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 javadoc.notree=false
@@ -47,7 +50,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 war.content.additional=
 client.urlPart=
 javadoc.additionalparam=
-javac.classpath=${libs.jstl.classpath}
+javac.classpath=\
+    ${libs.jstl.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 javadoc.noindex=false
 webinf.dir=${web.docbase.dir}/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -66,7 +71,8 @@ conf.dir=${source.root}/conf
 annotation.processing.run.all.processors=true
 compile.jsps=false
 excludes=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 display.browser=true
 endorsed.classpath=
@@ -75,7 +81,11 @@ build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
 war.name=Project1.war
 javadoc.windowtitle=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=${source.root}/java
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${javac.classpath}\:${build.classes.dir}
